--- a/Decofe2017/Content/Site.css
+++ b/Decofe2017/Content/Site.css
@@ -22,3 +22,10 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.radio-nota {
+    display: block;
+    float: left;
+    width: 9%;
+    text-align: center;
+}
