--- a/Decofe2017/Views/Home/Index.cshtml
+++ b/Decofe2017/Views/Home/Index.cshtml
@@ -1,31 +1,73 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<Decofe2017.Models.Trabalho>
+
+@{
+    ViewBag.Title = "Index";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<h2>Listagem Trabalhos</h2>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+@if (TempData["Sucesso"] != null)
+{
+    <div class="alert alert-success text-center">
+        <h3>@TempData["Sucesso"]</h3>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+}
+
+<table class="table table-hover">
+    <tr>
+        <th>
+            Cód. Trabalho
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Nome)
+        </th>
+        <th>
+            CPF
+        </th>
+
+        <th>
+            Título
+        </th>
+        <th>
+            Data Apresentação
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Ausente)
+        </th>
+        <th>
+            Data Envio
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.CodigoTrabalho)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Nome)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Cpf)
+        </td>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.Titulo)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DataApresentacao)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Ausente)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DataEnvio)
+        </td>
+        <td>
+            <button class="btn btn-info" title="Avaliar" onclick=" window.location.href = '@Url.Action("Avaliar", "Home", new {trabalhoId = item.TrabalhoId, avaliadorId = item.AvaliadorId})' "><i class="glyphicon glyphicon-edit"></i></button>
+        </td>
+    </tr>
+}
+
+</table>
